# inf2

./: CMakeLists.txt  README.md  main.cpp
